src/wayland/layershell_v1.cpp
@@ -111,11 +111,6 @@ void LayerShellV1InterfacePrivate::zwlr_layer_shell_v1_get_layer_surface(Resourc
     SurfaceInterface *surface = SurfaceInterface::get(surface_resource);
     OutputInterface *output = OutputInterface::get(output_resource);
 
-    if (surface->buffer()) {
-        wl_resource_post_error(resource->handle, error_already_constructed, "the wl_surface already has a buffer attached");
-        return;
-    }
-
     if (layer > layer_overlay) {
         wl_resource_post_error(resource->handle, error_invalid_layer, "invalid layer %d", layer);
         return;
